# libspatialindex

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  libspatialindex.pc
data/: gen_10000.txt  query_1000.txt
include/spatialindex/: KDTree.h  LearnedIndex.h  RTree.h  SpatialIndex.h
include/spatialindex/capi/: CountVisitor.h  IdVisitor.h  ObjVisitor.h  sidx_config.h
include/spatialindex/tools/: Tools.h
scripts/azp/: linux-test.sh
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/capi/: CountVisitor.cc  IdVisitor.cc  Index.cc  ObjVisitor.cc  sidx_api.cc
src/kdtree/: BulkLoader.cc  BulkLoader.h  Index.cc  Index.h  KDTree.cc  KDTree.h  Leaf.cc  Leaf.h  Node.cc  Node.h  PointerPoolNode.h  Statistics.cc  Statistics.h
src/learnedindex/: BulkLoader.cc  BulkLoader.h  Index.cc  Index.h  Leaf.cc  Leaf.h  LearnedIndex.cc  LearnedIndex.h  Node.cc  Node.h  PointerPoolNode.h  Statistics.cc  Statistics.h
src/lib/: libspatialindexTargets.cmake
src/mvrtree/: MVRTree.cc  MVRTree.h
src/rtree/: BulkLoader.cc  BulkLoader.h  Index.cc  Index.h  Leaf.cc  Node.cc  Node.h  RTree.cc  RTree.h
src/spatialindex/: SpatialIndexImpl.cc
src/storagemanager/: Buffer.cc
src/tprtree/: TPRTree.cc  TPRTree.h
test/: CMakeLists.txt  Makefile  cmake_install.cmake  make_output.txt  queries  test-geometry-Intersection  test-kdtree-Exhaustive  test-kdtree-Generator  test-kdtree-KDTreeBulkLoad  test-kdtree-KDTreeBulkLoad3d  test-kdtree-KDTreeLoad  test-kdtree-KDTreeLoad3d  test-kdtree-KDTreeQuery  test-kdtree-KDTreeQuery3d  test-kdtree-QDTreeBulkLoad  test-kdtree-QDTreeBulkLoad3d  test-learnedindex-Exhaustive  test-learnedindex-Generator  test-learnedindex-LISABulkLoad  test-learnedindex-LISABulkLoad3d  test-learnedindex-LISAQuery  test-learnedindex-LISAQuery3d  test-learnedindex-ZMBulkLoad  test-learnedindex-ZMBulkLoad3d  test-learnedindex-ZMQuery  test-learnedindex-ZMQuery3d  test-mvrtree-Exhaustive  test-mvrtree-Generator  test-mvrtree-MVRTreeLoad  test-mvrtree-MVRTreeQuery  test-rtree-Exhaustive  test-rtree-Generator  test-rtree-PlatonBulkLoad  test-rtree-PlatonBulkLoad3d  test-rtree-RTreeBulkLoad  test-rtree-RTreeLoad  test-rtree-RTreeLoad3d  test-rtree-RTreeQuery  test-rtree-RTreeQuery3d  test-rtree-SFCRTreeBulkLoad  (+6 more)
test/gtest/: Makefile  cmake_install.cmake  libsidxtest
test/gtest/gtest-1.10.0/: Makefile  cmake_install.cmake
test/kdtree/: CRTree.cc  Exhaustive.cc  Generator.cc  KDTreeBulkLoad.cc  KDTreeBulkLoad3d.cc  KDTreeLoad.cc  KDTreeLoad3d.cc  KDTreeParallel.cc  KDTreeQuery.cc  KDTreeQuery3d.cc  QDTreeBulkLoad.cc  QDTreeBulkLoad3d.cc
test/kdtree/test1/: data  queries  run
test/kdtree/test2/: run
test/kdtree/test3/: .t  data  kdtree_data  queries  run  tree.idx
test/kdtree/test4/: run
test/learnedindex/: Exhaustive.cc  Generator.cc  LISABulkLoad.cc  LISABulkLoad3d.cc  LISAQuery.cc  LISAQuery3d.cc  ZMBulkLoad.cc  ZMBulkLoad3d.cc  ZMQuery.cc  ZMQuery3d.cc
test/mvrtree/: MVRTreeLoad.cc  MVRTreeQuery.cc
test/rtree/: Exhaustive.cc  Generator.cc  PlatonBulkLoad.cc  PlatonBulkLoad3d.cc  RTreeBulkLoad.cc  RTreeLoad.cc  RTreeLoad3d.cc  RTreeParallel.cc  RTreeQuery.cc  RTreeQuery3d.cc  SFCRTreeBulkLoad.cc  SFCRTreeBulkLoad3d.cc
test/rtree/test1/: data  queries  run  run_rlr
test/rtree/test3/: run  run_sfc
test/tprtree/: TPRTreeLoad.cc  TPRTreeQuery.cc
